--- a/congo/web/templates/base.html
+++ b/congo/web/templates/base.html
@@ -13,6 +13,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand">Congo</a>
 
+      <ul class="nav navbar-nav navbar-center">
+        <li>
+          <input type="text" placeholder="Search..">
+        </li>
+      </ul>
 
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
@@ -28,3 +33,5 @@
   </body>
 
 </html>
+
+
