have barebones working home page

--- a/congo/web/templates/itemView.html
+++ b/congo/web/templates/itemView.html
@@ -2,12 +2,13 @@
 
 
 <div class="row">
+	<h1 id="item_name"><center>Item Title</center></h1>
+
     <div class="col-xs-3">
         <img src="../pics/shoes.jp2" class="pull-right img-responsive">
     </div>
 
    
-    	<h1>h1. Bootstrap heading</h1>
 
 </div>
 
