--- a/congo/web/templates/saveitem.html
+++ b/congo/web/templates/saveitem.html
@@ -40,6 +40,15 @@
 
 <!-- Text input-->
 <div class="form-group">
+  <label class="col-md-4 control-label" for="quantity">Quantity</label>  
+  <div class="col-md-2">
+  <input id="quantity" name="quantity" type="text" placeholder="1" class="form-control input-md">
+  </div>
+</div>
+
+
+<!-- Text input-->
+<div class="form-group">
   <label class="col-md-4 control-label" for="price">Price</label>  
   <div class="col-md-2">
   <input id="price" name="price" type="text" placeholder="$2" class="form-control input-md" required="">
@@ -55,12 +64,10 @@
   </div>
 </div>
 
-<!-- Text input-->
+<!-- Button -->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="quantity">Quantity</label>  
   <div class="col-md-4">
-  <input id="quantity" name="quantity" type="text" placeholder="1" class="form-control input-md">
-  <span class="help-block">help</span>  
+    <button id="saveitem" name="saveitem" class="btn btn-success">Save Item</button>
   </div>
 </div>
 
