--- a/congo/web/templates/homepage.html
+++ b/congo/web/templates/homepage.html
@@ -7,7 +7,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="../styles/main.css">
-<!------ Include the above in your HEAD tag ---------->
+<link rel="stylesheet" href="../styles/main.css">
 
 </head>
 <div class="container">
@@ -18,7 +18,7 @@
 
 
 <div class="row">
-<div class="col-md-4">
+<div class="col-sm-2">
 	<figure class="card card-product">
 		<div class="img-wrap"><img src="../pics/shoes.jp2"></div>
 		<figcaption class="info-wrap">
