--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -23,8 +23,14 @@
       </div>
     </nav>
 
-{%block content%}
-{%endblock%}
+
+<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Manage Listings</a>
+<br>
+
+<a href="saveitem.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create New Listings</a>
+
+
+
   </body>
 
 </html>
