--- a/congo/web/templates/base.html
+++ b/congo/web/templates/base.html
@@ -9,6 +9,12 @@
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 
     </head>
+        <style>
+body.margins{
+  margin: 20px;
+
+}
+</style>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand">Congo</a>
