--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -9,7 +9,15 @@
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 
     </head>
-  <body>
+    <style>
+body.margins{
+  margin: 20px;
+
+}
+</style>
+
+
+  <body class="margins">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand">Congo</a>
 
@@ -24,7 +32,10 @@
     </nav>
 
 
+<br>
+
 <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Manage Listings</a>
+<br>
 <br>
 
 <a href="saveitem.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create New Listings</a>
