--- a/congo/web/templates/saveitem.html
+++ b/congo/web/templates/saveitem.html
@@ -67,7 +67,7 @@
 <!-- Button -->
 <div class="form-group">
   <div class="col-md-4">
-    <button id="saveitem" name="saveitem" class="btn btn-success">Save Item</button>
+    <button id="saveitem" name="saveitem" class="btn btn-success">Save</button>
   </div>
 </div>
 
