--- a/congo/web/templates/homepage.html
+++ b/congo/web/templates/homepage.html
@@ -6,7 +6,7 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" href="../styles/main.css">
+<link rel="stylesheet" href="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/main.css">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -25,68 +25,33 @@
 
 
 <div class="row">
+  {% for l in data %}
 <div class="col-md-4">
 	<figure class="card card-product">
 		<div class="img-wrap"><img src="../pics/shoes.jp2"></div>
 		<figcaption class="info-wrap">
-				<h4 class="title">Red Shoes</h4>
-				<p class="desc">Selling great shoes!</p>
+				<h4 class="title">{{l.name}}</h4>
+				<p class="desc">{{l.desc}}</p>
 				<div class="rating-wrap">
 					<div class="label-rating">132 reviews</div>
 					<div class="label-rating">154 orders </div>
 				</div> <!-- rating-wrap.// -->
 		</figcaption>
 		<div class="bottom-wrap">
-			<a href="" class="btn btn-sm btn-primary float-right">Order Now</a>	
+			<a href="" class="btn btn-sm btn-primary float-right">Order Now</a>
 			<div class="price-wrap h5">
-				<span class="price-new">$1280</span> <del class="price-old">$1980</del>
+				<span class="price-new">${{l.price}}</span> <del class="price-old">$20</del>
 			</div> <!-- price-wrap.// -->
 		</div> <!-- bottom-wrap.// -->
 	</figure>
 </div> <!-- col // -->
-<div class="col-md-4">
-	<figure class="card card-product">
-		<div class="img-wrap"><img src="../pics/basketball.jpg"> </div>
-		<figcaption class="info-wrap">
-				<h4 class="title">Basketball</h4>
-				<p class="desc">Some small description goes here</p>
-				<div class="rating-wrap">
-					<div class="label-rating">132 reviews</div>
-					<div class="label-rating">154 orders </div>
-				</div> <!-- rating-wrap.// -->
-		</figcaption>
-		<div class="bottom-wrap">
-				<a href="" class="btn btn-sm btn-primary float-right">Order Now</a>	
-				<div class="price-wrap h5">
-					<span class="price-new">$1280</span> <del class="price-old">$1980</del>
-				</div> <!-- price-wrap.// -->
-		</div> <!-- bottom-wrap.// -->
-	</figure>
-</div> <!-- col // -->
-<div class="col-md-4">
-	<figure class="card card-product">
-		<div class="img-wrap"><img src="../pics/dress.jpg"></div>
-		<figcaption class="info-wrap">
-				<h4 class="title">Perfect Dress</h4>
-				<p class="desc">Some small description goes here</p>
-				<div class="rating-wrap">
-					<div class="label-rating">132 reviews</div>
-					<div class="label-rating">154 orders </div>
-				</div> <!-- rating-wrap.// -->
-		</figcaption>
-		<div class="bottom-wrap">
-				<a href="" class="btn btn-sm btn-primary float-right">Order Now</a>	
-				<div class="price-wrap h5">
-					<span class="price-new">$1280</span> <del class="price-old">$1980</del>
-				</div> <!-- price-wrap.// -->
-		</div> <!-- bottom-wrap.// -->
-	</figure>
-</div> <!-- col // -->
+{% endfor %}
+
 </div> <!-- row.// -->
 
 
 
-</div> 
+</div>
 <!--container.//-->
 
 <br><br><br>
