--- a/congo/web/templates/deleteitem.html
+++ b/congo/web/templates/deleteitem.html
@@ -7,27 +7,14 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-        <link rel="stylesheet" href="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/main.css">
 
     </head>
-        <style>
-body.margins{
-  margin: 20px;
-
-}
-</style>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand">Congo</a>
 
-      <ul class="nav navbar-nav navbar-center">
-        <li>
-          <input type="text" placeholder="Search..">
-        </li>
-      </ul>
 
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" href="#">Login</a>
@@ -35,9 +22,33 @@ body.margins{
         </ul>
       </div>
     </nav>
+<form class="form-horizontal" action="/profile/{{name}}/">
+  {% csrf_token %}
+<fieldset>
 
-{%block content%}
-{%endblock%}
+<!-- Form Name -->
+<legend>Delete Item</legend>
+
+<!-- Text input-->
+<div class="form-group">
+  <label class="col-md-4 control-label" for="Itemname">Item Name</label>
+  <div class="col-md-4">
+  <input id="Itemname" name="Itemname" type="text" class="form-control input-md">
+
+  </div>
+</div>
+
+
+<!-- Button -->
+<div class="form-group">
+  <div class="col-md-4">
+    <input type="submit" id="saveitem" name="saveitem" class="btn btn-success"></input>
+  </div>
+</div>
+
+</fieldset>
+</form>
+
   </body>
 
 </html>
