--- a/congo/web/templates/homepage.html
+++ b/congo/web/templates/homepage.html
@@ -28,7 +28,7 @@
   {% for l in data %}
 <div class="col-md-4">
 	<figure class="card card-product">
-		<div class="img-wrap"><img src="../pics/shoes.jp2"></div>
+		<div class="img-wrap"><img src="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/basketball.jpg"></div>
 		<figcaption class="info-wrap">
 				<h4 class="title">{{l.name}}</h4>
 				<p class="desc">{{l.desc}}</p>
