--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -33,12 +33,48 @@ body.margins{
 
 
 <br>
+<div class="container">
 
-<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Manage Listings</a>
+<hr>
+
+
+
+
+<div class="row">
+  {% for l in data %}
+<div class="col-md-4">
+	<figure class="card card-product">
+		<div class="img-wrap"><img src="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/basketball.jpg"></div>
+		<figcaption class="info-wrap">
+				<h4 class="title">{{l.name}}</h4>
+				<p class="desc">{{l.desc}}</p>
+				<div class="rating-wrap">
+					<div class="label-rating">132 reviews</div>
+					<div class="label-rating">154 orders </div>
+				</div> <!-- rating-wrap.// -->
+		</figcaption>
+		<div class="bottom-wrap">
+			<a href="/profile/{{name}}/deleteitem/{{l.id}}/" class="btn btn-sm btn-primary float-right">Delete</a>
+      <a href="/profile/{{name}}/updateitem/{{l.id}}/" class="btn btn-sm btn-primary float-right">Update</a>
+			<div class="price-wrap h5">
+				<span class="price-new">${{l.price}}</span> <del class="price-old">$20</del>
+			</div> <!-- price-wrap.// -->
+		</div> <!-- bottom-wrap.// -->
+	</figure>
+</div> <!-- col // -->
+{% endfor %}
+
+</div> <!-- row.// -->
+
+
+
+</div>
+<!--container.//-->
+<a href="/profile/{{name}}/deleteitem/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Manage Listings</a>
 <br>
 <br>
 
-<a href="saveitem.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create New Listings</a>
+<a href="/profile/{{name}}/newitem/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create New Listings</a>
 
 
 
