--- a/congo/web/templates/itemview.html
+++ b/congo/web/templates/itemview.html
@@ -32,7 +32,7 @@ body.margins{
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="#">Logout</a>
             </li>
         </ul>
       </div>
