--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -16,7 +16,6 @@ body.margins{
 }
 </style>
 
-
   <body class="margins">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand">Congo</a>
@@ -25,7 +24,7 @@ body.margins{
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="#">Logout</a>
             </li>
         </ul>
       </div>
@@ -35,8 +34,12 @@ body.margins{
 <br>
 <div class="container">
 
-<hr>
 
+<a href="/profile/{{name}}/deleteitem/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Manage Listings</a>
+
+
+<a href="/profile/{{name}}/newitem/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create New Listings</a>
+<hr>
 
 
 
@@ -70,11 +73,7 @@ body.margins{
 
 </div>
 <!--container.//-->
-<a href="/profile/{{name}}/deleteitem/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Manage Listings</a>
-<br>
-<br>
 
-<a href="/profile/{{name}}/newitem/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create New Listings</a>
 
 
 
