removed the old price tag. Moved the update/delete buttons around

--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -57,11 +57,13 @@ body.margins{
 				</div> <!-- rating-wrap.// -->
 		</figcaption>
 		<div class="bottom-wrap">
-			<a href="/profile/{{name}}/deleteitem/{{l.id}}/" class="btn btn-sm btn-primary float-right">Delete</a>
-      <a href="/profile/{{name}}/updateitem/{{l.id}}/" class="btn btn-sm btn-primary float-right">Update</a>
+
 			<div class="price-wrap h5">
-				<span class="price-new">${{l.price}}</span> <del class="price-old">$20</del>
+				<span class="price-new">${{l.price}}</span>
 			</div> <!-- price-wrap.// -->
+
+      <a href="/profile/{{name}}/deleteitem/{{l.id}}/" class="btn btn-sm btn-primary float-right">Delete</a>
+      <a href="/profile/{{name}}/updateitem/{{l.id}}/" class="btn btn-sm btn-primary float-right">Update</a>
 		</div> <!-- bottom-wrap.// -->
 	</figure>
 </div> <!-- col // -->
