--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -24,7 +24,7 @@ body.margins{
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" href="/login/">Logout</a>
             </li>
         </ul>
       </div>
