--- a/congo/web/styles/main.css
+++ b/congo/web/styles/main.css
@@ -93,7 +93,7 @@ span.psw {
 }
 
 body{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+    background: white;
 }
 .emp-profile{
     padding: 3%;
