--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -20,7 +20,6 @@ body.margins{
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand">Congo</a>
 
-
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -31,9 +30,12 @@ body.margins{
     </nav>
 
 
-<br>
 <div class="container">
+  <center>
+      <img src="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/Screen+Shot+2019-04-23+at+8.45.54+PM.png" alt="Logo" width=300>
+    </center>
 
+<br>
 
 <div class="row justify-content-center">
 <a href="/profile/{{name}}/deleteitem/" class="btn btn-primary btn-lg btn-success active mr-3" role="button" aria-pressed="true">Manage Listings</a>
