--- a/congo/web/templates/editItem.html
+++ b/congo/web/templates/editItem.html
@@ -60,7 +60,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="img">Image URL</label>
   <div class="col-md-2">
-  <input id="img" style="width:600" name="img" type="text" value="{{data.image}}"class="form-control input-md" required="">
+  <input id="img" style="width:600" name="img" type="text" value="{{data.image}}"class="form-control input-md">
 
   </div>
 </div>
