--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -30,8 +30,9 @@ body.margins{
         </ul>
       </div>
     </nav>
-
-
+<h2>
+Welcome Back, {{name}}
+</h2>
 <br>
 <div class="container">
 
@@ -39,7 +40,7 @@ body.margins{
 
 
 
-
+{{name}}'s Inventory: {{count}}
 <div class="row">
   {% for l in data %}
 <div class="col-md-4">
