--- a/congo/web/templates/login.html
+++ b/congo/web/templates/login.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/main.css">
+<link rel="stylesheet" href="../styles/main.css">
 
 
 </head>
@@ -14,7 +14,7 @@
 
 <form action="/login/" method ="post">
 
-  <!--<div class="container">
+<!--   <div class="container">
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
 
@@ -30,7 +30,9 @@
   <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>-->
+  </div> -->
+
+
   {% csrf_token %}
   {{form}}
   <input type="submit" value="OK">
