--- a/congo/web/templates/saveitem.html
+++ b/congo/web/templates/saveitem.html
@@ -27,8 +27,9 @@
 <fieldset>
 
 <!-- Form Name -->
+<div class="col-md-4">
 <legend>Form Name</legend>
-
+</div>
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="Itemname">Item Name</label>
@@ -37,7 +38,6 @@
 
   </div>
 </div>
-
 
 
 <!-- Text input-->
