--- a/congo/web/templates/login.html
+++ b/congo/web/templates/login.html
@@ -28,7 +28,7 @@ body.margins{
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/login/">Logout</a>
+                <a class="nav-link" href="/login/">Login</a>
             </li>
         </ul>
       </div>
