--- a/congo/web/templates/login.html
+++ b/congo/web/templates/login.html
@@ -39,8 +39,13 @@ body.margins{
 <body>
 
   <center>
+      <img src="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/Screen+Shot+2019-04-23+at+8.45.54+PM.png" alt="Logo" width=250>
+    </center>
 
-<h2>Login Form</h2>
+  <center>
+    <br>
+
+<h2>Login</h2>
 </center>
 
 <form action="/login/" method ="post">
@@ -65,7 +70,7 @@ body.margins{
   {% csrf_token %}
   {{form}}
   <center>
-  <input type="submit" value="OK">
+  <input type="submit" value="Submit">
 </center>
 </form>
 
