changed to imglink from price

--- a/congo/web/templates/saveitem.html
+++ b/congo/web/templates/saveitem.html
@@ -63,7 +63,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="imagelink">Image Link</label>
   <div class="col-md-4">
-  <input id="imglink" id="imagename" name="price" type="text" placeholder="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone/xr/iphone-xr-white-select-201809?wid=940&hei=1112&fmt=png-alpha&qlt=80&.v=1551226036668" class="form-control input-md" required="">
+  <input id="imglink" id="imagename" name="imglink" type="text" placeholder="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone/xr/iphone-xr-white-select-201809?wid=940&hei=1112&fmt=png-alpha&qlt=80&.v=1551226036668" class="form-control input-md" required="">
 <button onclick="myFunction()" type="button" id="uploadbtn" class="btn btn-outline-info">Upload</button>
 
 
