added the image URL change

--- a/congo/web/templates/saveitem.html
+++ b/congo/web/templates/saveitem.html
@@ -11,7 +11,8 @@
     </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand">Congo</a>
+            <a class="navbar-brand" href="/profile/{{name}}/">Congo</a>
+
 
 
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
@@ -63,7 +64,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="imagelink">Image Link</label>
   <div class="col-md-4">
-  <input id="imglink" id="imagename" name="price" type="text" placeholder="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone/xr/iphone-xr-white-select-201809?wid=940&hei=1112&fmt=png-alpha&qlt=80&.v=1551226036668" class="form-control input-md" required="">
+  <input id="imglink" id="imagename" name="imgLink" type="text" placeholder="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone/xr/iphone-xr-white-select-201809?wid=940&hei=1112&fmt=png-alpha&qlt=80&.v=1551226036668" class="form-control input-md" required="">
 <button onclick="myFunction()" type="button" id="uploadbtn" class="btn btn-outline-info">Upload</button>
 
 
