--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -56,7 +56,7 @@ Welcome Back, {{name}}
 <div class="col-md-4">
 	<figure class="card card-product">
     <div align = "center">
-		<div class="img-wrap"><img src="https://s3.amazonaws.com/gp4emdrsinus/dbstuff/basketball.jpg"></div>
+		<div class="img-wrap"><img src="{{l.image}}" height="220" width="220"></div>
 		<figcaption class="info-wrap">
 				<h4 class="title">{{l.name}}</h4>
 				<p class="desc">{{l.desc}}</p>
