--- a/congo/web/templates/profilepage.html
+++ b/congo/web/templates/profilepage.html
@@ -49,8 +49,12 @@ Welcome Back, {{name}}
 </div>
 <hr>
 
-
+<center>
 {{name}}'s Inventory: {{count}}
+</center>
+
+<br>
+
 <div class="row">
   {% for l in data %}
 <div class="col-md-4">
