--- a/congo/web/templates/editItem.html
+++ b/congo/web/templates/editItem.html
@@ -11,7 +11,7 @@
     </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand">Congo</a>
+      <a class="navbar-brand" href="/profile/{{name}}/">Congo</a>
 
 
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
